color folder icon based on boolean value of its toggle node child called "enabled"